--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,13 +3,15 @@ services:
   keycloak:
       container_name: keycloak
       image: ${IMAGE}
+      command: start-dev
       environment:
-        DB_VENDOR: h2
-        PROXY_ADDRESS_FORWARDING: "true"
-        KEYCLOAK_USER: ${KEYCLOAK_USER}
-        KEYCLOAK_PASSWORD: ${KEYCLOAK_PASSWORD}
-        KEYCLOAK_STATISTICS: ${KEYCLOAK_STATISTICS}
-        KEYCLOAK_LOGLEVEL: ${KEYCLOAK_LOGLEVEL}
+        KC_DB: dev-mem
+        KC_BOOTSTRAP_ADMIN_USERNAME: ${KC_BOOTSTRAP_ADMIN_USERNAME}
+        KC_BOOTSTRAP_ADMIN_PASSWORD: ${KC_BOOTSTRAP_ADMIN_PASSWORD}
+        KC_METRICS_ENABLED: "true"
+        KC_HEALTH_ENABLED: "true"
+        KC_PROXY_HEADERS: xforwarded
+        KC_LOG_CONSOLE_LEVEL: ${KC_LOG_CONSOLE_LEVEL}
         JAVA_OPTS_APPEND: "${JAVA_OPTS_APPEND}"
       ports:
         - 8080:8080
